--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <p>Completed a course on HTML and became a full-fledged HTML programmer.</p>
           </div>
           <div>
-            <img src="./images/Screenshot 2023-12-24 101734.png" width="40%" height="320px" class="image rounded-5">
+            <a href="https://github.com/MabekojeOlawale/Capstone-Project-Personal-Site/blob/b2ffe73003c3dab1a917b630ec60bcef3b256278/images/Screenshot%202023-12-24%20101734.png?raw=true"><img src="./images/Screenshot 2023-12-24 101734.png" width="40%" height="320px" class="image rounded-5"></a>
           </div>
         </div>
     
