--- a/index.html
+++ b/index.html
@@ -76,12 +76,10 @@
                     <p class="fs-5">Dec 2023</p>
                     <p class="first-project">Completed my first Capstone Project which was to build a webpage (Resume) using HTML only.</p>
                     <button type="button" class="btn btn-light">
-              <a href="https://mabekojeolawale.github.io/Capstone-Project-HTML/" style="text-decoration: none;" class="link">Visit Site
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-right" viewBox="0 0 16 16">
-                  <path d="M6 12.796V3.204L11.481 8zm.659.753 5.48-4.796a1 1 0 0 0 0-1.506L6.66 2.451C6.011 1.885 5 2.345 5 3.204v9.592a1 1 0 0 0 1.659.753z"/>
-                </svg>
-              </a>
-            </button>
+                        <a href="https://mabekojeolawale.github.io/Capstone-Project-HTML/" style="text-decoration: none;" class="link">Visit Site
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-right" viewBox="0 0 16 16"><path d="M6 12.796V3.204L11.481 8zm.659.753 5.48-4.796a1 1 0 0 0 0-1.506L6.66 2.451C6.011 1.885 5 2.345 5 3.204v9.592a1 1 0 0 0 1.659.753z"/></svg>
+                        </a>
+                    </button>
                 </div>
                 <div>
                     <img src="./images/HTML.png" width="40%" height="320px" class="image img-capstone rounded-5">
@@ -136,5 +134,7 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
+
+</html>
 
 </html>
