--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
   <!--Footer-->
   <div class="containe p-3">
     <div class="copyright">
-      <p class="mb-0">&copy; 2023 Slynx Mobile Accessories</p>
+      <p class="mb-0">&copy; 2023 Mabekoje Olawale</p>
     </div>
 
     <!--Contact-->
